--- a/resume.html
+++ b/resume.html
@@ -26,7 +26,7 @@
 <div id="resumeSection">    
     <div class="resume">
         <h3><i>Resume</i></h3>
-        <img src="images/Resume_image.jpeg" class="cv">
+        <img src="images/Resume_image.jpg" class="cv">
     </div>
 
     <div class="internship">
